# notebooklm-export

./: .gitignore  CHECKPOINT.md  README.md  export-gui.bat  export.bat  notebooklm-export.bat  pyproject.toml
memory/: reference_brain_notebook.md
notebooklm_export/: __init__.py  __main__.py  cli.py  gui.py  mcp_util.py  verify_export.py
tests/: test_gui_log_filter.py  test_mcp_util_sources.py  test_verify_export.py
tests/fixtures/: notebook_get_five_sources.json
