[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-export"
version = "0.1.0"
description = "Bulk export NotebookLM sources and studio metadata via the official MCP (stdio)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
]

[project.scripts]
notebooklm-export = "notebooklm_export.cli:main_sync"
notebooklm-export-gui = "notebooklm_export.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notebooklm_export*"]
